SERVER-803 make repl work when auth is enabled